BDOG-3191 Update Scala 3 and dependencies